// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`documentation "*/" is is escaped 1`] = `
"/**
 * @schema fqn.of.TestType
 */
export interface TestType {
    /**
     * hello _/world
     *
     * @schema fqn.of.TestType#field
     */
    readonly field?: string;

}

"
`;

exports[`documentation does not render if not defined 1`] = `
"/**
 * @schema fqn.of.TestType
 */
export interface TestType {
    /**
     * @schema fqn.of.TestType#field
     */
    readonly field?: boolean;

}

"
`;

exports[`documentation renders based on description 1`] = `
"/**
 * @schema fqn.of.TestType
 */
export interface TestType {
    /**
     * hello, description
     *
     * @schema fqn.of.TestType#field
     */
    readonly field?: string;

}

"
`;

exports[`enums renders a typescript enum 1`] = `
"/**
 * @schema fqn.of.TestType
 */
export interface TestType {
    /**
     * description of first enum
     *
     * @schema fqn.of.TestType#firstEnum
     */
    readonly firstEnum: FqnOfTestTypeFirstEnum;

    /**
     * @schema fqn.of.TestType#child
     */
    readonly child?: FqnOfTestTypeChild;

}

/**
 * description of first enum
 *
 * @schema FqnOfTestTypeFirstEnum
 */
export enum FqnOfTestTypeFirstEnum {
    /** value1 */
    VALUE1 = \\"value1\\",
    /** value2 */
    VALUE2 = \\"value2\\",
    /** value-of-three */
    VALUE_OF_THREE = \\"value-of-three\\",
    /** valueOfFour */
    VALUE_OF_FOUR = \\"valueOfFour\\",
}

/**
 * @schema FqnOfTestTypeChild
 */
export interface FqnOfTestTypeChild {
    /**
     * description of second enum
     *
     * @schema FqnOfTestTypeChild#secondEnum
     */
    readonly secondEnum?: FqnOfTestTypeChildSecondEnum;

}

/**
 * description of second enum
 *
 * @schema FqnOfTestTypeChildSecondEnum
 */
export enum FqnOfTestTypeChildSecondEnum {
    /** hey */
    HEY = \\"hey\\",
    /** enum values can be crazy */
    ENUM_VALUES_CAN_BE_CRAZY = \\"enum values can be crazy\\",
    /** yes>>123 */
    YES_123 = \\"yes>>123\\",
}

"
`;

exports[`structs array of structs is considered optional 1`] = `
"/**
 * @schema fqn.of.TestType
 */
export interface TestType {
    /**
     * @schema fqn.of.TestType#shouldBeRequired
     */
    readonly shouldBeRequired?: ItemType;

    /**
     * @schema fqn.of.TestType#mapShouldBeOptional
     */
    readonly mapShouldBeOptional?: { [key: string]: ItemType };

    /**
     * @schema fqn.of.TestType#arrayShouldBeOptional
     */
    readonly arrayShouldBeOptional?: ItemType[];

}

/**
 * @schema ItemType
 */
export interface ItemType {
    /**
     * @schema ItemType#requiredField
     */
    readonly requiredField: string;

}

"
`;

exports[`structs has a field that references another struct (with required fields) 1`] = `
"/**
 * @schema fqn.of.TestType
 */
export interface TestType {
    /**
     * @schema fqn.of.TestType#other
     */
    readonly other?: Other;

}

/**
 * @schema Other
 */
export interface Other {
    /**
     * @schema Other#stringValue
     */
    readonly stringValue: string;

}

"
`;

exports[`structs has primitive types and collections of primitive types 1`] = `
"/**
 * @schema fqn.of.TestType
 */
export interface TestType {
    /**
     * @schema fqn.of.TestType#stringValue
     */
    readonly stringValue?: string;

    /**
     * @schema fqn.of.TestType#boolValue
     */
    readonly boolValue?: boolean;

    /**
     * @schema fqn.of.TestType#numberValue
     */
    readonly numberValue?: number;

    /**
     * @schema fqn.of.TestType#integerValue
     */
    readonly integerValue?: number;

    /**
     * @schema fqn.of.TestType#arrayOfString
     */
    readonly arrayOfString?: string[];

}

"
`;

exports[`structs includes required fields 1`] = `
"/**
 * @schema fqn.of.TestType
 */
export interface TestType {
    /**
     * Minimum number of seconds for which a newly created pod should be ready without any of its container crashing, for it to be considered available. Defaults to 0 (pod will be considered available as soon as it is ready)
     *
     * @default 0 (pod will be considered available as soon as it is ready)
     * @schema fqn.of.TestType#minReadySeconds
     */
    readonly minReadySeconds: number;

    /**
     * Indicates that the deployment is paused.
     *
     * @schema fqn.of.TestType#paused
     */
    readonly paused?: boolean;

    /**
     * The maximum time in seconds for a deployment to make progress before it is considered to be failed. The deployment controller will continue to process failed deployments and a condition with a ProgressDeadlineExceeded reason will be surfaced in the deployment status. Note that progress will not be estimated during the time a deployment is paused. Defaults to 600s.
     *
     * @default 600s.
     * @schema fqn.of.TestType#progressDeadlineSeconds
     */
    readonly progressDeadlineSeconds?: number;

    /**
     * Number of desired pods. This is a pointer to distinguish between explicit zero and not specified. Defaults to 1.
     *
     * @default 1.
     * @schema fqn.of.TestType#replicas
     */
    readonly replicas?: number;

    /**
     * The number of old ReplicaSets to retain to allow rollback. This is a pointer to distinguish between explicit zero and not specified. Defaults to 10.
     *
     * @default 10.
     * @schema fqn.of.TestType#revisionHistoryLimit
     */
    readonly revisionHistoryLimit: number;

}

"
`;

exports[`structs references itself 1`] = `
"/**
 * @schema fqn.of.TestType
 */
export interface TestType {
    /**
     * @schema fqn.of.TestType#entrypoint
     */
    readonly entrypoint?: MyType;

}

/**
 * @schema MyType
 */
export interface MyType {
    /**
     * @schema MyType#self
     */
    readonly self?: MyType;

}

"
`;

exports[`unions constraints are ignored for objects 1`] = `
"/**
 * @schema TestType
 */
export interface TestType {
    /**
     * Fault injection policy to apply on HTTP traffic at
the client side.
     *
     * @schema TestType#fault
     */
    readonly fault?: TestTypeFault;

}

/**
 * Fault injection policy to apply on HTTP traffic at
the client side.
 *
 * @schema TestTypeFault
 */
export interface TestTypeFault {
    /**
     * @schema TestTypeFault#delay
     */
    readonly delay?: TestTypeFaultDelay;

}

/**
 * @schema TestTypeFaultDelay
 */
export interface TestTypeFaultDelay {
    /**
     * @schema TestTypeFaultDelay#exponentialDelay
     */
    readonly exponentialDelay?: string;

    /**
     * Add a fixed delay before forwarding the request.
     *
     * @schema TestTypeFaultDelay#fixedDelay
     */
    readonly fixedDelay?: string;

    /**
     * Percentage of requests on which the delay
will be injected (0-100).
     *
     * @schema TestTypeFaultDelay#percent
     */
    readonly percent?: number;

    /**
     * Percentage of requests on which the delay
will be injected.
     *
     * @schema TestTypeFaultDelay#percentage
     */
    readonly percentage?: TestTypeFaultDelayPercentage;

}

/**
 * Percentage of requests on which the delay
will be injected.
 *
 * @schema TestTypeFaultDelayPercentage
 */
export interface TestTypeFaultDelayPercentage {
    /**
     * @schema TestTypeFaultDelayPercentage#value
     */
    readonly value?: number;

}

"
`;

exports[`unions include primitives 1`] = `
"/**
 * @schema fqn.of.TestType
 */
export class TestType {
    public static fromString(value: string): TestType {
        return new TestType(value);
    }
    public static fromNumber(value: number): TestType {
        return new TestType(value);
    }
    private constructor(value: any) {
        Object.defineProperty(this, 'resolve', { value: () => value });
    }
}

"
`;
